--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,19 @@ server:
 #TODO: figure out why I need this here and in bootstrap.yml
 spring:
   application:
-    name: eventProcessor
+    name: ledger-service
+  datasource:
+    url: jdbc:h2:mem:ledger
+    username: sa
+    password: sa
+    driverClassName: org.h2.Driver
+  jpa:
+    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+  h2:
+    console.enabled: true
+    console.path: /h2-console
+    console.settings.trace: false 
+    spring.h2.console.settings.web-allow-others: false
 
 ribbon:
   ServerListRefreshInterval: 1000
