--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,16 +7,15 @@ spring:
     name: ledger-service
   datasource:
     url: jdbc:h2:mem:ledger
-    username: sa
-    password: sa
     driverClassName: org.h2.Driver
+    generate-unique-name: false
   jpa:
-    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.H2Dialect
   h2:
     console.enabled: true
     console.path: /h2-console
-    console.settings.trace: false 
-    spring.h2.console.settings.web-allow-others: false
+    console.settings.trace: true 
+    spring.h2.console.settings.web-allow-others: true
 
 ribbon:
   ServerListRefreshInterval: 1000
