--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-filepath=C:\\Ravinder\\Work\\Projects\\ledger-service\\src\\main\\resources\\test-files\\ledger-input-file.txt
+filepath=C:\\Ravinder\\Work\\Projects\\ledger-service\\src\\main\\resources\\test-files\\ledger-input-file2.txt
